{
    "name": "InputMapping",
    "maps": [
        {
            "name": "Gameplay",
            "id": "f1483159-4b10-4cce-802a-6b28ab8ca221",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "738ee847-3505-4f8c-b8a2-0e46ca3a458f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "TurretRotation",
                    "type": "Value",
                    "id": "ecbbe0fb-ea21-4439-b932-4bec1e2020ce",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChassieMovement",
                    "type": "Value",
                    "id": "f1151a95-bfa1-41c6-91c1-e1671c62f9da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseTurretRotation",
                    "type": "PassThrough",
                    "id": "d9bc38b2-d421-44d6-a2e0-9d52dc1862b4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ec82b2aa-af0a-4edd-abf1-241fd2d95364",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - WASD;Mouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "043d752f-5ea6-4db3-a511-b50f16770292",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - ARROWS;Mouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9e23f51-e992-4854-8306-9247216cbfdb",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cd3d4c89-eedd-4cb9-bc6e-fa7005197289",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurretRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "aea9d314-490a-40a4-8b86-ae07b35b865c",
                    "path": "<Keyboard>/comma",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - ARROWS",
                    "action": "TurretRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "7fd6913b-b8fc-4841-bb8d-23428bcaaaee",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - ARROWS",
                    "action": "TurretRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "2df9bb5b-c963-45ba-b8a8-04ae602e4379",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurretRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "eaec5c73-1d9b-4ae7-9d85-e2c72e3f78a7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - WASD",
                    "action": "TurretRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "d73af747-ffea-411f-acce-262b46500fc0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - WASD",
                    "action": "TurretRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad turret Control",
                    "id": "04f94ff5-abf7-4e5f-a5b6-611a07018428",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurretRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e4ca3bb7-6140-4091-a306-5feae27b9ae8",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TurretRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ea5d9a81-fad9-4ca2-bd04-61df776491bd",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TurretRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard WASD Drive Control",
                    "id": "ef87471d-2a0b-41f6-ab7f-bafcece2b302",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChassieMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9c62d08b-c9c2-4580-b955-51efb0440fc6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - WASD;Mouse",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e264f9b7-5cfa-4beb-b4d0-e143ed4460c0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - WASD;Mouse",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "87c10f50-e31f-4736-81f0-2bc948300370",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - WASD;Mouse",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "10db4df1-aa16-48f7-b427-0058a56f4ad2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - WASD;Mouse",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard Cross Drive Control",
                    "id": "67434ba5-1c36-4df0-9d92-497b99285ab8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChassieMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f1936819-af6e-4119-91dd-92b9cc8e0b32",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - ARROWS;Mouse",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "62960706-08a7-43fd-8c5c-f4e480da4ef3",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - ARROWS;Mouse",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f0a1feb2-49b0-469c-9791-5f40b8b85192",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - ARROWS;Mouse",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6b9a7026-0772-46b4-9849-28984b4aa10e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - ARROWS;Mouse",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad left Stick Drive Control",
                    "id": "91c04932-e2d8-40ca-8e02-b297e500d32c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChassieMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7128c1cf-5c89-494d-ae77-bcea216206fe",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "00a3f06e-c13b-4501-9491-7a2d8a43404f",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ab41e7da-958e-409c-a481-e48769b832d7",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1b77f848-4999-4045-a182-84415a5a4b7a",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad left Cross Drive Control",
                    "id": "1230f925-0077-40ec-b3d2-4f1793e3c631",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChassieMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2db76595-2963-460b-a3f1-cfbbeca8b28f",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b2a660f8-0fbe-4575-89e8-04dc13e98b26",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7f9b911a-f09a-4fab-9f09-a5be3e43a4df",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9dc5b0ba-7d02-4db5-a74d-02c613495442",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChassieMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a8568102-f8a3-4b36-9a25-ccd9d8ff9d2e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard - WASD;Keyboard - ARROWS;Mouse",
                    "action": "MouseTurretRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard - WASD",
            "bindingGroup": "Keyboard - WASD",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard - ARROWS",
            "bindingGroup": "Keyboard - ARROWS",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": []
        }
    ]
}